Implement minmax_element
The implementation is very similar to the dash::min_element one. In the
first step each node computes its local minmax_element. In a second step
these will get reduced with two separate std::min_element and
std::max_element calls on each machine.

--- a/dash/test/Makefile
+++ b/dash/test/Makefile
@@ -59,6 +59,7 @@ FILES = ArrayTest \
 				MakePatternTest \
 				MaxElementTest \
 				MinElementTest \
+				MinMaxElementTest \
 				main
 
 OBJS = $(addsuffix .o, $(FILES))
