--- a/patterns/Makefile
+++ b/patterns/Makefile
@@ -1,7 +1,9 @@
 
-CXXFLAGS=-I./include -std=c++11
+CXXFLAGS=-I./include -std=c++14
 
-graph: graph.cpp
+includes = $(wildcard include/*.h)
+
+graph: graph.cpp ${includes}
 	$(CXX) $(CXXFLAGS) -o graph graph.cpp
 
 clean:
