Switch to constexpr

--- a/patterns/Makefile
+++ b/patterns/Makefile
@@ -2,10 +2,8 @@ CXXFLAGS=-I./include -std=c++14 -g
 
 includes = $(wildcard include/patterns/*.h)
 
-all: graph examples
+all: examples
 
-graph: graph.cpp ${includes}
-	$(CXX) $(CXXFLAGS) -o graph graph.cpp
 
 examples: examples.cpp ${includes}
 	$(CXX) $(CXXFLAGS) -o examples examples.cpp
