--- a/patterns/tests/CMakeLists.txt
+++ b/patterns/tests/CMakeLists.txt
@@ -3,9 +3,14 @@ project(PatternTests)
 
 find_package(GTest REQUIRED)
 find_package(Threads REQUIRED)
+find_package(DASH-MPI REQUIRED)
+
+set(DASH_INCLUDE_DIR ${DASH_PATH}/include)
+set(DASH_LIBRARY_DIR ${DASH_PATH}/lib)
+set(CMAKE_BUILD_TYPE Debug)
 
 include_directories(${GTEST_INCLUDE_DIRS} "../include")
 
 add_executable(tests local_pattern_test.cxx)
 
-target_link_libraries(tests ${GTEST_BOTH_LIBRARIES} Threads::Threads)
+target_link_libraries(tests ${GTEST_BOTH_LIBRARIES} Threads::Threads ${DASH_LIBRARIES})
