--- a/dash/CMakeLists.txt
+++ b/dash/CMakeLists.txt
@@ -532,6 +532,9 @@ endif()
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/dash
         DESTINATION include FILES_MATCHING PATTERN "*.h")
 
+install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/patterns
+        DESTINATION include FILES_MATCHING PATTERN "*.h")
+
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/cpp17
         DESTINATION include FILES_MATCHING PATTERN "*.h")
 
